cabecalho esta completo

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>vai ser uma imagem aqui</h1>
-        <ul>
-            <li>Cadastrar</li>
-            <li>Entrar</li>
+    <header class="cabecalho">
+       <img class="cabecalho-imagem" src="artesanato.png" alt="logo do marilene artesanato">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Cadastrar</li>
+            <li class="cabecalho-lista-item">Entrar</li>
         </ul>
     </header>
     
