--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
@@ -21,6 +24,11 @@
                 </p>
         </div>
         <img class="imagem-marilene"src="marilene-imagem.png" alt="imagem da marilene">
+    </section>
+    <section class="produtos">
+        <h2 class="produtos-titulo">Meus produtos</h2>
+        <img class="produto-imagem" src="Nossa Senhora de Guadalupe .png" alt="amigurumi de Nossa Senhora de Guadalupe">
+        <h3 class="guadalupe">Nossa Senhora de Guadalupe</h3>
     </section>
 </body>
 </html>
