--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     </section>
     <section class="produtos">
         <h2 class="produtos-titulo">Meus produtos</h2>
+        <div class="produtos-div">
         <img class="produto-imagem" src="Nossa Senhora de Guadalupe .png" alt="amigurumi de Nossa Senhora de Guadalupe">
         <h3 class="guadalupe">Nossa Senhora de Guadalupe</h3>
+        <h4 class="preco-guadalupe">$50,00</h4>
+        <img class="imagem-icone" src="sacola-de-compras.png" alt="icone sacola de compras">
+    </div>
     </section>
 </body>
 </html>
