--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MarileneArtesanatos</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
             <h2 class="marilene-titulo">sobre mim</h2>
             <p class="marilene-texto">Sou a Marilene nasci dia 15 de junho de 1978 e desde muito cedo comecei a fazer crochê para ter alguma renda a mais para a minha família, e ainda hoje sigo com crochê fazendo amigurumis e tapetes em geral, e também com a pintura de panos de prato e jogos de cozinha.
                 </p>
-        </div>
+        </div class="produtos-todos">
         <img class="imagem-marilene"src="marilene-imagem.png" alt="imagem da marilene">
     </section>
     <section class="produtos">
