--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <p class="marilene-texto">Sou a Marilene nasci dia 15 de junho de 1978 e desde muito cedo comecei a fazer crochê para ter alguma renda a mais para a minha família, e ainda hoje sigo com crochê fazendo amigurumis e tapetes em geral, e também com a pintura de panos de prato e jogos de cozinha.
                 </p>
         </div class="produtos-todos">
+        <span></span>
         <img class="imagem-marilene"src="marilene-imagem.png" alt="imagem da marilene">
     </section>
     <section class="produtos">
