fazendo a parte dos produtos

--- a/index.html
+++ b/index.html
@@ -17,23 +17,28 @@
             <li class="cabecalho-lista-item">Entrar</li>
         </ul>
     </header>
-    <section class="marilene">
-        <div class="marilene-div-conteudo">
-            <h2 class="marilene-titulo">sobre mim</h2>
-            <p class="marilene-texto">Sou a Marilene nasci dia 15 de junho de 1978 e desde muito cedo comecei a fazer crochê para ter alguma renda a mais para a minha família, e ainda hoje sigo com crochê fazendo amigurumis e tapetes em geral, e também com a pintura de panos de prato e jogos de cozinha.
-                </p>
-        </div class="produtos-todos">
-        <span></span>
-        <img class="imagem-marilene"src="marilene-imagem.png" alt="imagem da marilene">
-    </section>
-    <section class="produtos">
-        <h2 class="produtos-titulo">Meus produtos</h2>
-        <div class="produtos-div">
-        <img class="produto-imagem" src="Nossa Senhora de Guadalupe .png" alt="amigurumi de Nossa Senhora de Guadalupe">
-        <h3 class="guadalupe">Nossa Senhora de Guadalupe</h3>
-        <h4 class="preco-guadalupe">$50,00</h4>
-        <img class="imagem-icone" src="sacola-de-compras.png" alt="icone sacola de compras">
+<section class="marilene">
+    <div class="marilene-div-conteudo">
+        <h2 class="marilene-titulo">Um pouco sobre mim</h2>
+        <p class="marilene-texto">Sou a Marilene nasci dia 15 de junho de 1978 e desde muito cedo comecei a fazer crochê para ter alguma renda a mais para a minha família, e ainda hoje sigoom crochê fazendo amigurumis e tapetes em geral, e também com a pintura de panos de prato e jogos de cozinha.</p>
     </div>
-    </section>
-</body>
-</html>
+   <img class="imagem-marilene" src="marileneimagem.png" alt="imagem da marilene">
+ </section>
+ <section class="produtos">
+    <h2 class="produto-titulo">Meus Produtos</h2>
+    <div class="produtos-div">
+      <img class="imagem-guadalupe" src="Nossa Senhora de Guadalupe .png" alt="amigurumi de Nossa Senhora de Guadalipe">
+      <h3 class="nome-guadalupe">Nossa Senhora de Guadalupe</h3>
+      <h4 class="preço">R$60,00</h4>
+      <img class="icone-sacola" src="sacola-de-compras.png" alt="icone sacola de compras">
+    </div>
+    <div class="produtos-div">
+        <img class="imagem-guadalupe" src="Nossa Senhora de Guadalupe .png" alt="amigurumi de Nossa Senhora de Guadalipe">
+        <h3 class="nome-guadalupe">Nossa Senhora de Guadalupe</h3>
+        <h4 class="preço">R$60,00</h4>
+        <img class="icone-sacola" src="sacola-de-compras.png" alt="icone sacola de compras">
+      </div>
+
+ </section>
+ </body>
+ </html>
