--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
  </section>
  <section class="produtos">
     <h2 class="produto-titulo">Meus Produtos</h2>
+    <div class="produtos-todos">
+        <span></span>
     <div class="produtos-div">
       <img class="imagem-guadalupe" src="Nossa Senhora de Guadalupe .png" alt="amigurumi de Nossa Senhora de Guadalipe">
       <h3 class="nome-guadalupe">Nossa Senhora de Guadalupe</h3>
@@ -33,12 +35,41 @@
       <img class="icone-sacola" src="sacola-de-compras.png" alt="icone sacola de compras">
     </div>
     <div class="produtos-div">
-        <img class="imagem-guadalupe" src="Nossa Senhora de Guadalupe .png" alt="amigurumi de Nossa Senhora de Guadalipe">
-        <h3 class="nome-guadalupe">Nossa Senhora de Guadalupe</h3>
+        <img class="imagem-guadalupe" src="santaluzia.png" alt="amigurmi de Santa Luzia">
+        <h3 class="nome-guadalupe">Santa Luzia</h3>
         <h4 class="preço">R$60,00</h4>
         <img class="icone-sacola" src="sacola-de-compras.png" alt="icone sacola de compras">
       </div>
-
+      <div class="produtos-div">
+        <img class="imagem-guadalupe"src="sagrados.png" alt="sagrados coracaoes">
+        <h3 class="nome-guadalupe">Sagrados Coraçãoes</h3>
+        <h4 class="preço">R$120,00</h4>
+        <img class="icone-sacola" src="sacola-de-compras.png" alt="icone sacola de compras">
+      </div>
+      <span></span>
+      <span></span>
+      <div class="produtos-div">
+        <img class="imagem-guadalupe"src="banheiro.png" alt="jogo de banheiro">
+        <h3 class="nome-guadalupe">Jogo de Banheiro</h3>
+        <h4 class="preço">200,00</h4>
+        <img class="icone-sacola" src="sacola-de-compras.png" alt="icone sacola de compras">
+      </div>
+      <div class="produtos-div">
+        <img class="imagem-guadalupe" src="mesa.png" alt="crochê mesa">
+        <h3 class="nome-guadalupe">crochê de mesa</h3>
+        <h4 class="preço">R$110,00</h4>
+        <img class="icone-sacola" src="sacola-de-compras.png" alt="icone sacola de compras">
+      </div>
+      <div class="produtos-div"> 
+        <img class="imagem-guadalupe"src="geladeira.png" alt="pintura de prato">
+        <h3 class="nome-guadalupe">Pintura de prato</h3>
+        <h4 class="preço">R$80,00</h4>
+        <img class="icone-sacola" src="sacola-de-compras.png" alt="icone sacola de compras">
+      </div>
+    </div>
  </section>
+  <footer class="rodape">
+    <img class="imagem-rodape" src="artesanato.png" alt="logo MarileneArtesanatos">
+  </footer>
  </body>
  </html>
